2010-11-15  Marcus Brinkmann  <mb@g10code.com>

	* conf-w32ce-msc/stdint.h: New file.
	* conf-w32ce-msc/build.mk (conf_sources): Add stdint.h.
	(copy-static-source): Revert last change.

2010-11-15  Werner Koch  <wk@g10code.com>

	* conf-w32ce-msc/build.mk (copy-static-source): Create stdint.h.
	(all): Add ws2.lib
	(clean): New.

2010-11-02  Werner Koch  <wk@g10code.com>

	* conf-w32ce-msc/build.mk: Change directory layout.

2010-11-01  Werner Koch  <wk@g10code.com>

	* conf-w32ce-msc/build.mk: New.
	* conf-w32ce-msc/config.h: New.