@@ -6,6 +6,8 @@
 
 2010-11-15  Werner Koch  <wk@g10code.com>
 
+	* conf-w32ce-msc/config.h (strdup, strcasecmp): Add macros.
+
 	* conf-w32ce-msc/build.mk (copy-static-source): Create stdint.h.
 	(all): Add ws2.lib
 	(clean): New.
